fixed article title alignment and spacing, contact icons, 5day rectangles more square in large view, ready to submitt

--- a/lesson6/css/large.css
+++ b/lesson6/css/large.css
@@ -6,4 +6,7 @@ main {
 .summary {
     font-size: 1.8em;
 }
+.fiveDayPics div {
+    width: 200px;
+}
 }
